Fix navbar misalignment issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -640,9 +640,9 @@ body {
    float: left;
    margin: 2px;
    text-align: center;
-   width: 610px;
+   width: 147px;
    border: 1px solid inherit;
-   padding: 31px 0px 0px 0px;
+   padding: 24px 0px 0px 0px;
 
  }
 
